--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "vitest": "3.2.4"
   },
   "dependencies": {
+    "@faker-js/faker": "10.1.0",
     "@fastify/cookie": "11.0.2",
     "@fastify/jwt": "9.1.0",
     "@fastify/multipart": "9.0.3",
